--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
     "cross-env": "^10.1.0",
@@ -31,6 +32,7 @@
     "mongoose": "^8.19.0",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.6",
     "otp-generator": "^4.0.1",
     "passport": "^0.7.0",
