--- a/.github/workflows/update-badge.yml
+++ b/.github/workflows/update-badge.yml
@@ -25,6 +25,6 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add docs/api-doc.md
+          git add docs/api-docs.md
           git diff --staged --quiet || git commit -m "docs: update last modified date [skip ci]"
           git push
