--- a/.github/workflows/update-badge.yml
+++ b/.github/workflows/update-badge.yml
@@ -3,8 +3,7 @@ on:
   push:
     branches: [ main ]
     paths:
-      - 'docs/**'
-      - 'BACKEND/docs/**'
+      - 'docs/api-docs.md'
   schedule:
     - cron: '0 0 * * *'
 
@@ -16,30 +15,39 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
           
       - name: Update last updated date
         run: |
           CURRENT_DATE=$(date '+%b %d, %Y')
           FILE_PATH="docs/api-docs.md"
           
-          # Check if file exists
-          if [ ! -f "$FILE_PATH" ]; then
-            echo "File $FILE_PATH not found, trying BACKEND/docs/api-docs.md"
-            FILE_PATH="BACKEND/docs/api-docs.md"
-          fi
-          
           if [ -f "$FILE_PATH" ]; then
-            sed -i "s/### Last Updated: .*/### Last Updated: $CURRENT_DATE/" "$FILE_PATH"
-            echo "Updated $FILE_PATH"
+            # Update the Last Updated date
+            sed -i "s/Last Updated: .*/Last Updated: $CURRENT_DATE/" "$FILE_PATH"
+            echo "Updated last updated date to $CURRENT_DATE"
+            
+            # Force a change by adding/updating a timestamp comment
+            # Remove any existing auto-update comment
+            sed -i '/<!-- Auto-updated:/d' "$FILE_PATH"
+            # Add new auto-update comment at the end
+            echo "<!-- Auto-updated: $(date) -->" >> "$FILE_PATH"
           else
-            echo "Error: Could not find api-docs.md file"
+            echo "Error: Could not find $FILE_PATH"
             exit 1
           fi
           
-      - name: Commit and push if changed
+      - name: Commit and push changes
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add docs/api-docs.md BACKEND/docs/api-docs.md
-          git diff --staged --quiet || git commit -m "docs: update last modified date [skip ci]"
-          git push
+          git add docs/api-docs.md
+          
+          # Check if there are changes
+          if git diff --staged --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "docs: update last modified date [skip ci]"
+            git push
+            echo "Changes pushed successfully"
+          fi
