--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-rate-limit": "^8.1.0",
     "express-session": "^1.18.2",
     "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
     "http-errors": "^2.0.0",
     "ioredis": "^5.8.1",
     "joi": "^18.0.1",
@@ -33,12 +34,12 @@
     "mongoose": "^8.19.0",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
-    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.6",
     "otp-generator": "^4.0.1",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
+    "slugify": "^1.6.6",
     "swagger-ui-express": "^5.0.1",
     "validator": "^13.15.15",
     "yamljs": "^0.3.0"
