--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "mongoose": "^8.19.0",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.6",
     "otp-generator": "^4.0.1",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "slugify": "^1.6.6",
+    "socket.io": "^4.8.1",
     "swagger-ui-express": "^5.0.1",
     "validator": "^13.15.15",
     "yamljs": "^0.3.0"
